Fixed the backend problems